Changelog
=========

[Alexandru Ghica - alec.ghica@eaudeweb.ro]
[Alin Voinea - alin.voinea@eaudeweb.ro]
[Antonio De Marinis - demarinis@eea.europa.eu]
[Tiberiu Ichim tiberiu.ichim@eaudeweb.ro]

0.4 (unreleased)
----------------

0.3 (2010-08-16)
----------------
* Change: Set permissions for reference popups to View instead of ModifyContent, [tiberich #3525]

0.2 (2010-06-16)
------------------
* Change: Changed AutoRelations API to return a list of tabs (labeled brains) [#3298 voineali]


0.1 (2010-06-07)
----------------

* Initial release